--- a/.github/workflows/test_pyworkflow.yml
+++ b/.github/workflows/test_pyworkflow.yml
@@ -27,7 +27,7 @@ jobs:
         run: pip install uv
 
       - name: Install dependencies
-        run: uv pip install -r requirements.txt
+        run: uv sync --frozen
 
       - name: Run tests
         run: pytest
